Mit Colab erstellt

--- a/AML_CHALLENGE.ipynb
+++ b/AML_CHALLENGE.ipynb
@@ -5162,6 +5162,240 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Baseline"
+      ],
+      "metadata": {
+        "id": "0Oi_AfL8tbcw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir data\n",
+        "!gdown 1CVAQDuPOiwm8h9LJ8a_oOs6zOWS6EgkB\n",
+        "!gdown 1ykZ9fjTxUwdiEwqagoYZiMcD5aG-7rHe\n",
+        "!unzip -o test.zip -d data\n",
+        "!unzip -o train.zip -d data\n",
+        "\n",
+        "!git clone https://github.com/Mamiglia/challenge.git"
+      ],
+      "metadata": {
+        "id": "6XXzzq9AtaIl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.utils.data import DataLoader, TensorDataset\n",
+        "from pathlib import Path\n",
+        "from tqdm import tqdm\n",
+        "\n",
+        "from challenge.src.common import load_data, prepare_train_data, generate_submission"
+      ],
+      "metadata": {
+        "id": "kUZM092etlZw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Configuration\n",
+        "MODEL_PATH = \"models/mlp_baseline.pth\"\n",
+        "EPOCHS = 20\n",
+        "BATCH_SIZE = 256\n",
+        "LR = 0.001\n",
+        "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "#\n",
+        "class MLP(nn.Module):\n",
+        "    def __init__(self, input_dim=1024, output_dim=1536, hidden_dim=2048):\n",
+        "        super().__init__()\n",
+        "        self.net = nn.Sequential(\n",
+        "            nn.Linear(input_dim, output_dim),\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return self.net(x)"
+      ],
+      "metadata": {
+        "id": "ivIx-9ratonL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn.functional as F\n",
+        "\n",
+        "def train_model(model, train_loader, val_loader, device, epochs, lr):\n",
+        "    \"\"\"Train the MLP model\"\"\"\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+        "\n",
+        "    best_val_loss = float('inf')\n",
+        "\n",
+        "    for epoch in range(epochs):\n",
+        "        # Training\n",
+        "        model.train()\n",
+        "        train_loss = 0\n",
+        "        for X_batch, y_batch in tqdm(train_loader, desc=f\"Epoch {epoch+1}/{epochs}\"):\n",
+        "            X_batch, y_batch = X_batch.to(device), y_batch.to(device)\n",
+        "\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(X_batch)\n",
+        "\n",
+        "            loss = F.mse_loss(outputs, y_batch)\n",
+        "\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "\n",
+        "            train_loss += loss.item()\n",
+        "\n",
+        "        train_loss /= len(train_loader)\n",
+        "\n",
+        "        # Validation\n",
+        "        model.eval()\n",
+        "        val_loss = 0\n",
+        "        with torch.no_grad():\n",
+        "            for X_batch, y_batch in val_loader:\n",
+        "                X_batch, y_batch = X_batch.to(device), y_batch.to(device)\n",
+        "                outputs = model(X_batch)\n",
+        "                loss = F.mse_loss(outputs, y_batch)\n",
+        "                val_loss += loss.item()\n",
+        "\n",
+        "        val_loss /= len(val_loader)\n",
+        "\n",
+        "        print(f\"Epoch {epoch+1}: Train Loss = {train_loss:.6f}, Val Loss = {val_loss:.6f}\")\n",
+        "\n",
+        "        # Save best model\n",
+        "        if val_loss < best_val_loss:\n",
+        "            best_val_loss = val_loss\n",
+        "            Path(MODEL_PATH).parent.mkdir(parents=True, exist_ok=True)\n",
+        "            torch.save(model.state_dict(), MODEL_PATH)\n",
+        "            print(f\"  ✓ Saved best model (val_loss={val_loss:.6f})\")\n",
+        "\n",
+        "    return model"
+      ],
+      "metadata": {
+        "id": "09EhA9vatrRS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load data\n",
+        "train_data = load_data(\"data/train/train.npz\")\n",
+        "X, y, label = prepare_train_data(train_data)\n",
+        "DATASET_SIZE = len(X)\n",
+        "# Split train/val\n",
+        "# This is done only to measure generalization capabilities, you don't have to\n",
+        "# use a validation set (though we encourage this)\n",
+        "n_train = int(0.9 * len(X))\n",
+        "TRAIN_SPLIT = torch.zeros(len(X), dtype=torch.bool)\n",
+        "TRAIN_SPLIT[:n_train] = 1\n",
+        "X_train, X_val = X[TRAIN_SPLIT], X[~TRAIN_SPLIT]\n",
+        "y_train, y_val = y[TRAIN_SPLIT], y[~TRAIN_SPLIT]\n",
+        "\n",
+        "\n",
+        "train_dataset = TensorDataset(X_train, y_train)\n",
+        "val_dataset = TensorDataset(X_val, y_val)\n",
+        "\n",
+        "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+        "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE)\n",
+        "y_train.shape[-1], X_val.shape[-1]"
+      ],
+      "metadata": {
+        "id": "wHgZaxy_twIO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = MLP().to(DEVICE)\n",
+        "print(f\"   Parameters: {sum(p.numel() for p in model.parameters()):,}\")\n",
+        "\n",
+        "# Train\n",
+        "print(\"\\n3. Training...\")\n",
+        "model = train_model(model, train_loader, val_loader, DEVICE, EPOCHS, LR)\n",
+        "\n",
+        "# Load best model for evaluation\n",
+        "model.load_state_dict(torch.load(MODEL_PATH))"
+      ],
+      "metadata": {
+        "id": "lE5CwJCFtzfB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from challenge.src.eval import visualize_retrieval\n",
+        "import numpy as np\n",
+        "import torch\n",
+        "\n",
+        "val_caption_text = train_data['captions/text'][~TRAIN_SPLIT]\n",
+        "val_text_embd = X_val\n",
+        "img_VAL_SPLIT = label[~TRAIN_SPLIT].sum(dim=0) > 0\n",
+        "val_img_file = train_data['images/names'][img_VAL_SPLIT]\n",
+        "val_img_embd = torch.from_numpy(train_data['images/embeddings'][img_VAL_SPLIT])\n",
+        "val_label = np.nonzero(train_data['captions/label'][~TRAIN_SPLIT][:,img_VAL_SPLIT])[1]\n",
+        "\n",
+        "# Sample and visualize\n",
+        "for i in range(5):\n",
+        "    idx = np.random.randint(0, 100)\n",
+        "    caption_embd = val_text_embd[idx]\n",
+        "    caption_text = val_caption_text[idx]\n",
+        "    gt_index = val_label[idx]\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        pred_embds = model(caption_embd.to(DEVICE)).cpu()\n",
+        "\n",
+        "        visualize_retrieval(\n",
+        "            pred_embds,\n",
+        "            gt_index,\n",
+        "            val_img_file,\n",
+        "            caption_text, val_img_embd, k=5)"
+      ],
+      "metadata": {
+        "id": "o6uvjZJZt2PI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_data = load_data(\"data/test/test.clean.npz\")\n",
+        "\n",
+        "test_embds = test_data['captions/embeddings']\n",
+        "test_embds = torch.from_numpy(test_embds).float()\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "    pred_embds = model(test_embds.to(DEVICE)).cpu()\n",
+        "\n",
+        "submission = generate_submission(test_data['captions/ids'], pred_embds, 'submission.csv')\n",
+        "print(f\"Model saved to: {MODEL_PATH}\")"
+      ],
+      "metadata": {
+        "id": "RkbJt1-AuCGh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
