Mit Colab erstellt

--- a/AML_CHALLENGE.ipynb
+++ b/AML_CHALLENGE.ipynb
@@ -5185,10 +5185,10 @@
       ],
       "metadata": {
         "id": "6XXzzq9AtaIl",
-        "outputId": "fc40364d-caf7-4524-becf-c8374a960303",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fc40364d-caf7-4524-becf-c8374a960303"
       },
       "execution_count": 1,
       "outputs": [
@@ -10331,12 +10331,12 @@
       ],
       "metadata": {
         "id": "wHgZaxy_twIO",
-        "outputId": "4442d605-966b-40cf-e356-df8de10c0902",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "01545648-490f-41c2-f7ff-cbd690296917"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -10350,11 +10350,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(1536, 1024)"
+              "(torch.Size([112500, 1536]), torch.Size([112500, 1024]))"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -10364,6 +10364,12 @@
         "# 1. Crossattention with a basic simple transformer\n",
         "import torch\n",
         "import torch.nn as nn\n",
+        "# Configuration\n",
+        "MODEL_PATH = \"models/crossattention.pth\"\n",
+        "EPOCHS = 30\n",
+        "BATCH_SIZE = 256\n",
+        "LR = 0.001\n",
+        "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
         "class CrossAttentionTranslator(nn.Module):\n",
         "    def __init__(self, text_dim=1024, img_dim=1536, hidden_dim=2048, num_heads=8):\n",
@@ -10382,14 +10388,15 @@
         "        query = self.query_proj(self.query_embed.expand(batch_size, -1, -1))\n",
         "        key = self.key_proj(text_emb)\n",
         "        value = self.value_proj(text_emb)\n",
+        "        print(query.shape, key.shape, value.shape)\n",
         "        attn_out, _ = self.attn(query, key, value)\n",
         "        return self.norm(self.output_proj(attn_out))  # (batch, 1, img_dim)\n",
         "\n",
         "import torch.nn.functional as F\n",
         "\n",
-        "def train_model(model, train_loader, val_loader, device, epochs, lr):\n",
+        "def train_transformer(model, train_loader, val_loader, device, epochs, lr):\n",
         "    \"\"\"Train the model\"\"\"\n",
-        "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+        "    optimizer = torch.optim.AdamW(model.parameters(), lr=lr, weight_decay=1e-4)\n",
         "\n",
         "    best_val_loss = float('inf')\n",
         "\n",
@@ -10439,44 +10446,55 @@
         "    return model\n"
       ],
       "metadata": {
-        "id": "LBXpXp2eNm7e",
-        "outputId": "b10043df-9a63-438c-d745-fd5e245f0ef9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "LBXpXp2eNm7e"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(torch.Size([112500, 1536]), torch.Size([112500, 1024]))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model = MLP().to(DEVICE)\n",
+        "model = CrossAttentionTranslator().to(DEVICE)\n",
         "print(f\"   Parameters: {sum(p.numel() for p in model.parameters()):,}\")\n",
         "\n",
         "# Train\n",
         "print(\"\\n3. Training...\")\n",
-        "model = train_model(model, train_loader, val_loader, DEVICE, EPOCHS, LR)\n",
+        "model = train_transformer(model, train_loader, val_loader, DEVICE, EPOCHS, LR)\n",
         "\n",
         "# Load best model for evaluation\n",
         "model.load_state_dict(torch.load(MODEL_PATH))"
       ],
       "metadata": {
-        "id": "lE5CwJCFtzfB"
+        "id": "lE5CwJCFtzfB",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 263
+        },
+        "outputId": "3d4d0085-1477-41e6-a7b1-da34045f6be6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Parameters: 27,283,456\n",
+            "\n",
+            "3. Training...\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'train_loader' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2793300078.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Train\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n3. Training...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_transformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDEVICE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEPOCHS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Load best model for evaluation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'train_loader' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
