added regularization, still need to add data augmentation

--- a/AML_CHALLENGE.ipynb
+++ b/AML_CHALLENGE.ipynb
@@ -484,58 +484,128 @@
         "# 1. Learning with a basic simple transformer\n",
         "# 2. Learning with a basic deep neural network\n",
         "# Configuration\n",
-        "MODEL_PATH = \"models/crossattention.pth\"\n",
         "EPOCHS = 30\n",
         "BATCH_SIZE = 256\n",
         "LR = 0.001\n",
         "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
         "class TransformerTranslator(nn.Module):\n",
-        "    def __init__(self, text_dim=1024, img_dim=1536, hidden_dim=2048, num_heads=8, num_layers=2):\n",
+        "    \"\"\"\n",
+        "    Transformer-style translator from text embedding -> image embedding.\n",
+        "    Input: text_emb (batch, 1, text_dim) or (batch, text_dim)\n",
+        "    Output: (batch, 1, img_dim)\n",
+        "\n",
+        "    Regularization: dropout in Transformer layers, LayerNorm, GELU activations,\n",
+        "    residuals are intrinsic in TransformerEncoderLayer.\n",
+        "    \"\"\"\n",
+        "    def __init__(self,\n",
+        "                 text_dim=1024,\n",
+        "                 img_dim=1536,\n",
+        "                 hidden_dim=2048,\n",
+        "                 num_heads=8,\n",
+        "                 num_layers=2,\n",
+        "                 dropout=0.1):\n",
         "        super().__init__()\n",
+        "        self.input_ln = nn.LayerNorm(text_dim)\n",
         "        self.input_proj = nn.Linear(text_dim, hidden_dim)\n",
-        "        self.layers = nn.ModuleList([\n",
-        "            nn.TransformerEncoderLayer(\n",
-        "                d_model=hidden_dim,\n",
-        "                nhead=num_heads,\n",
-        "                dim_feedforward=hidden_dim * 2,\n",
-        "                batch_first=True\n",
-        "            )\n",
-        "            for _ in range(num_layers)\n",
-        "        ])\n",
+        "\n",
+        "        encoder_layer = nn.TransformerEncoderLayer(\n",
+        "            d_model=hidden_dim,\n",
+        "            nhead=num_heads,\n",
+        "            dim_feedforward=hidden_dim * 4,\n",
+        "            dropout=dropout,\n",
+        "            activation='gelu',\n",
+        "            batch_first=True\n",
+        "        )\n",
+        "        # Stack\n",
+        "        self.encoder = nn.TransformerEncoder(encoder_layer, num_layers=num_layers)\n",
+        "\n",
         "        self.output_proj = nn.Linear(hidden_dim, img_dim)\n",
-        "        self.norm = nn.LayerNorm(img_dim)\n",
+        "        self.output_ln = nn.LayerNorm(img_dim)\n",
+        "        self.dropout = nn.Dropout(dropout)\n",
+        "\n",
+        "        # residual projection for input -> img_dim if desired (helps stabilise)\n",
+        "        if text_dim != img_dim:\n",
+        "            self.res_proj = nn.Linear(text_dim, img_dim)\n",
+        "        else:\n",
+        "            self.res_proj = nn.Identity()\n",
         "\n",
         "    def forward(self, text_emb):\n",
-        "        # text_emb: (batch, 1, text_dim)\n",
-        "        x = self.input_proj(text_emb)\n",
-        "        for layer in self.layers:\n",
-        "            x = layer(x)\n",
-        "        x = self.output_proj(x)\n",
-        "        return self.norm(x)\n",
+        "        if text_emb.dim() == 2:\n",
+        "            x = text_emb.unsqueeze(1)  # (B, 1, text_dim)\n",
+        "        else:\n",
+        "            x = text_emb  # (B, 1, text_dim)\n",
+        "\n",
+        "        x = self.input_ln(x)\n",
+        "        x = self.input_proj(x)  # (B, 1, hidden_dim)\n",
+        "\n",
+        "        # Transformer encoder (with dropout inside layers)\n",
+        "        x = self.encoder(x)  # (B, 1, hidden_dim)\n",
+        "\n",
+        "        out = self.output_proj(x)  # (B, 1, img_dim)\n",
+        "        out = self.dropout(out)\n",
+        "\n",
+        "        # add residual (projected input) and final norm\n",
+        "        res = self.res_proj(text_emb.squeeze(1) if text_emb.dim() == 3 else text_emb.squeeze(1))\n",
+        "        out = out.squeeze(1) + res\n",
+        "        out = self.output_ln(out)\n",
+        "        return out.unsqueeze(1)  # (B, 1, img_dim)\n",
         "\n",
         "class LatentSpaceTranslator(nn.Module):\n",
-        "    def __init__(self, text_dim=1024, img_dim=1536, hidden_dim=2048, num_layers=3):\n",
+        "    \"\"\"\n",
+        "    MLP translator from text embedding -> image embedding\n",
+        "    Input: text_emb (batch, text_dim) or (batch, 1, text_dim)\n",
+        "    Output: (batch, 1, img_dim)\n",
+        "    Regularization: dropout, LayerNorm, GELU, residual (optional projector)\n",
+        "    \"\"\"\n",
+        "    def __init__(self,\n",
+        "                 text_dim=1024,\n",
+        "                 img_dim=1536,\n",
+        "                 hidden_dim=2048,\n",
+        "                 num_layers=3,\n",
+        "                 dropout=0.2,\n",
+        "                 use_residual=True):\n",
         "        super().__init__()\n",
-        "        \n",
+        "        assert num_layers >= 2, \"num_layers should be >= 2 (including final proj)\"\n",
+        "        self.use_residual = use_residual\n",
+        "        self.input_ln = nn.LayerNorm(text_dim)\n",
         "        layers = []\n",
         "        in_dim = text_dim\n",
         "        for i in range(num_layers - 1):\n",
         "            layers.append(nn.Linear(in_dim, hidden_dim))\n",
-        "            layers.append(nn.ReLU())\n",
+        "            layers.append(nn.GELU())\n",
         "            layers.append(nn.LayerNorm(hidden_dim))\n",
+        "            layers.append(nn.Dropout(dropout))\n",
         "            in_dim = hidden_dim\n",
-        "        layers.append(nn.Linear(hidden_dim, img_dim))\n",
+        "        # final projection to image space\n",
+        "        layers.append(nn.Linear(in_dim, img_dim))\n",
         "        self.net = nn.Sequential(*layers)\n",
         "\n",
-        "    def forward(self, text_emb):\n",
-        "        # text_emb: (batch, text_dim) or (batch, 1, text_dim)\n",
-        "        if text_emb.dim() == 3:\n",
-        "            text_emb = text_emb.squeeze(1)\n",
-        "        img_emb = self.net(text_emb)\n",
-        "        return img_emb.unsqueeze(1)  # (batch, 1, img_dim)\n",
+        "        # if using residual, project input to img_dim to add it at the end\n",
+        "        if self.use_residual:\n",
+        "            if text_dim != img_dim:\n",
+        "                self.res_proj = nn.Linear(text_dim, img_dim)\n",
+        "            else:\n",
+        "                self.res_proj = nn.Identity()\n",
         "\n",
-        "def training(model, train_loader, val_loader, device, epochs, lr):\n",
+        "        # final layer norm in image space\n",
+        "        self.output_ln = nn.LayerNorm(img_dim)\n",
+        "\n",
+        "    def forward(self, text_emb):\n",
+        "        # Accept (B, text_dim) or (B, 1, text_dim)\n",
+        "        if text_emb.dim() == 3:\n",
+        "            x = text_emb.squeeze(1)\n",
+        "        else:\n",
+        "            x = text_emb\n",
+        "        x = self.input_ln(x)\n",
+        "        out = self.net(x)  # (B, img_dim)\n",
+        "        if self.use_residual:\n",
+        "            res = self.res_proj(x)\n",
+        "            out = out + res\n",
+        "        out = self.output_ln(out)\n",
+        "        return out.unsqueeze(1)  # (B, 1, img_dim)\n",
+        "\n",
+        "def training(model, train_loader, val_loader, device, epochs, lr, MODEL_PATH):\n",
         "    \"\"\"Train the model\"\"\"\n",
         "    optimizer = torch.optim.AdamW(model.parameters(), lr=lr, weight_decay=1e-4)\n",
         "\n",
@@ -632,14 +702,171 @@
         "id": "lE5CwJCFtzfB",
         "outputId": "3d4d0085-1477-41e6-a7b1-da34045f6be6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   Parameters: 9,451,008\n",
+            "\n",
+            "3. Training...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/30:   0%|          | 0/440 [00:00<?, ?it/s]C:\\Users\\pier1\\AppData\\Local\\Temp\\ipykernel_19836\\38849143.py:71: UserWarning: Using a target size (torch.Size([256, 1536])) that is different to the input size (torch.Size([256, 1, 1536])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+            "  loss = F.mse_loss(outputs, y_batch)\n",
+            "Epoch 1/30: 100%|█████████▉| 439/440 [08:24<00:00,  1.89it/s]C:\\Users\\pier1\\AppData\\Local\\Temp\\ipykernel_19836\\38849143.py:71: UserWarning: Using a target size (torch.Size([116, 1536])) that is different to the input size (torch.Size([116, 1, 1536])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+            "  loss = F.mse_loss(outputs, y_batch)\n",
+            "Epoch 1/30: 100%|██████████| 440/440 [08:24<00:00,  1.15s/it]\n",
+            "C:\\Users\\pier1\\AppData\\Local\\Temp\\ipykernel_19836\\38849143.py:88: UserWarning: Using a target size (torch.Size([256, 1536])) that is different to the input size (torch.Size([256, 1, 1536])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+            "  loss = F.mse_loss(outputs, y_batch)\n",
+            "C:\\Users\\pier1\\AppData\\Local\\Temp\\ipykernel_19836\\38849143.py:88: UserWarning: Using a target size (torch.Size([212, 1536])) that is different to the input size (torch.Size([212, 1, 1536])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+            "  loss = F.mse_loss(outputs, y_batch)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1: Train Loss = 0.871583, Val Loss = 0.833099\n",
+            "  ✓ Saved best model (val_loss=0.833099)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch 2/30: 100%|██████████| 440/440 [04:18<00:00,  1.70it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 2: Train Loss = 0.914525, Val Loss = 1.327441\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch 3/30: 100%|██████████| 440/440 [04:25<00:00,  1.66it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 3: Train Loss = 2.010302, Val Loss = 3.479879\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch 4/30: 100%|██████████| 440/440 [06:56<00:00,  1.06it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 4: Train Loss = 4.232427, Val Loss = 4.779017\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch 5/30: 100%|██████████| 440/440 [06:12<00:00,  1.18it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 5: Train Loss = 3.632357, Val Loss = 3.499021\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch 6/30: 100%|██████████| 440/440 [06:05<00:00,  1.20it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 6: Train Loss = 2.365173, Val Loss = 1.924354\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch 7/30: 100%|██████████| 440/440 [06:25<00:00,  1.14it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 7: Train Loss = 1.627385, Val Loss = 1.800594\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch 8/30: 100%|██████████| 440/440 [07:53<00:00,  1.08s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 8: Train Loss = 2.133099, Val Loss = 2.324005\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch 9/30:  25%|██▌       | 111/440 [02:09<06:23,  1.17s/it]\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Train\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m3. Training...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m model = \u001b[43mtraining\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDEVICE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEPOCHS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mLR\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Load best model for evaluation\u001b[39;00m\n\u001b[32m      9\u001b[39m model.load_state_dict(torch.load(MODEL_PATH))\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 72\u001b[39m, in \u001b[36mtraining\u001b[39m\u001b[34m(model, train_loader, val_loader, device, epochs, lr)\u001b[39m\n\u001b[32m     69\u001b[39m outputs = model(X_batch)\n\u001b[32m     71\u001b[39m loss = F.mse_loss(outputs, y_batch)\n\u001b[32m---> \u001b[39m\u001b[32m72\u001b[39m loss += (\u001b[32m1\u001b[39m - \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcosine_similarity\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_batch\u001b[49m\u001b[43m)\u001b[49m).mean()\n\u001b[32m     74\u001b[39m loss.backward()\n\u001b[32m     75\u001b[39m optimizer.step()\n",
+            "\u001b[31mKeyboardInterrupt\u001b[39m: "
+          ]
+        }
+      ],
       "source": [
-        "model = LatentSpaceTranslator().to(DEVICE)\n",
+        "arch = 'nn'\n",
+        "if arch == 'transformer':\n",
+        "    model = TransformerTranslator().to(DEVICE)\n",
+        "    MODEL_PATH = \"models/crossattention.pth\"\n",
+        "\n",
+        "else:\n",
+        "    model = LatentSpaceTranslator().to(DEVICE)\n",
+        "    MODEL_PATH = \"models/latent_space.pth\"\n",
         "print(f\"   Parameters: {sum(p.numel() for p in model.parameters()):,}\")\n",
         "\n",
         "# Train\n",
         "print(\"\\n3. Training...\")\n",
-        "model = training(model, train_loader, val_loader, DEVICE, EPOCHS, LR)\n",
+        "model = training(model, train_loader, val_loader, DEVICE, EPOCHS, LR, MODEL_PATH)\n",
         "\n",
         "# Load best model for evaluation\n",
         "model.load_state_dict(torch.load(MODEL_PATH))"
