tested if it is working

--- a/Crossflow.ipynb
+++ b/Crossflow.ipynb
@@ -62,6 +62,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6bfa0fed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "class TimeEmbedding(nn.Module):\n",
+    "    def __init__(self, dim):\n",
+    "        super().__init__()\n",
+    "        self.dim = dim\n",
+    "\n",
+    "    def forward(self, t):\n",
+    "        # t: (B,) in [0,1]\n",
+    "        half_dim = self.dim // 2\n",
+    "        emb = torch.exp(-torch.arange(half_dim, device=t.device) * (math.log(10000) / half_dim))\n",
+    "        emb = t.unsqueeze(1) * emb.unsqueeze(0)  # (B, half_dim)\n",
+    "        emb = torch.cat([torch.sin(emb), torch.cos(emb)], dim=1)  # (B, dim)\n",
+    "        return emb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d37e7e64",
    "metadata": {},
    "outputs": [],
@@ -122,8 +144,7 @@
     "        self.output_proj = nn.Linear(hidden_dim, img_dim)\n",
     "\n",
     "    def forward(self, t, z_text):\n",
-    "        B = z_text.size(0)\n",
-    "\n",
+    "        \n",
     "        # Project text into image space\n",
     "        z_proj = self.proj(z_text)\n",
     "\n",
@@ -152,28 +173,7 @@
    "id": "fc42f37c",
    "metadata": {},
    "source": [
-    "### Time Embedding, Flow Matching loss and inference euler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78d471ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TimeEmbedding(nn.Module):\n",
-    "    def __init__(self, dim):\n",
-    "        super().__init__()\n",
-    "        self.dim = dim\n",
-    "\n",
-    "    def forward(self, t):\n",
-    "        # t: (B,) in [0,1]\n",
-    "        half_dim = self.dim // 2\n",
-    "        emb = torch.exp(-torch.arange(half_dim, device=t.device) * (math.log(10000) / half_dim))\n",
-    "        emb = t.unsqueeze(1) * emb.unsqueeze(0)  # (B, half_dim)\n",
-    "        emb = torch.cat([torch.sin(emb), torch.cos(emb)], dim=1)  # (B, dim)\n",
-    "        return emb"
+    "### Flow Matching loss and inference euler"
    ]
   },
   {
@@ -397,8 +397,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ResidualFlowTransformer(text_dim=1024, img_dim=1538).to(DEVICE)\n",
-    "MODEL_PATH = \"drive/MyDrive/data//models/crossflow.pth\"\n",
+    "model = ResidualFlowTransformer(text_dim=1024, img_dim=1536, time_emb_dim=BATCH_SIZE).to(DEVICE)\n",
+    "MODEL_PATH = \"drive/MyDrive/data/models/crossflow.pth\"\n",
     "model = training_crossflow(\n",
     "    model,\n",
     "    train_loader,\n",
@@ -442,8 +442,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "OR",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
