added MLP as crossflow arch

--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -353,13 +353,7 @@
     "                        m.weight.copy_(W)\n",
     "                        applied = True\n",
     "                        break\n",
-    "\n",
-    "                elif isinstance(model, ResidualFlowTransformer) and name.endswith(\"proj\"):\n",
-    "                    print(m.weight.shape, W.shape)\n",
-    "                    if m.weight.shape == W.shape:\n",
-    "                        m.weight.copy_(W)\n",
-    "                        applied = True\n",
-    "                        break\n",
+    "                    \n",
     "        if not applied:\n",
     "            print(\"⚠️ Warning: Could not find matching layer for Procrustes init\")\n",
     "    return model\n"
@@ -687,9 +681,7 @@
     "    hidden_dim=best_params[\"hidden_dim\"],\n",
     "    num_layers=best_params[\"num_layers\"],\n",
     "    dropout=best_params[\"dropout\"]).to(DEVICE)\n",
-    "    MODEL_PATH = \"drive/MyDrive/data/models/residual.pth\"\n",
-    "\n",
-    "model.load_state_dict(torch.load(MODEL_PATH))"
+    "    MODEL_PATH = \"drive/MyDrive/data/models/residual.pth\""
    ]
   },
   {
@@ -721,7 +713,9 @@
     "                 True,\n",
     "                 10000,\n",
     "                 best_params[\"temperature\"],\n",
-    "                 best_params[\"queue_size\"])"
+    "                 best_params[\"queue_size\"])\n",
+    "\n",
+    "model.load_state_dict(torch.load(MODEL_PATH))"
    ]
   },
   {
