--- a/Crossflow.ipynb
+++ b/Crossflow.ipynb
@@ -88,24 +88,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LatentFlowTranslator(nn.Module):\n",
-    "    def __init__(self, text_dim, img_dim, hidden_dim=1024, num_layers=3):\n",
+    "class LatentFlowMLP(nn.Module):\n",
+    "    def __init__(self, text_dim, img_dim, hidden_dim=1024, num_layers=3, time_emb_dim=32):\n",
     "        super().__init__()\n",
+    "        self.text_dim = text_dim\n",
+    "        self.img_dim = img_dim\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.time_emb_dim = time_emb_dim\n",
+    "\n",
+    "        # Procrustes linear projection (initialized later)\n",
+    "        self.proj = nn.Linear(text_dim, img_dim, bias=False)\n",
+    "\n",
+    "        # Time embedding\n",
+    "        self.time_emb = TimeEmbedding(time_emb_dim)\n",
+    "        self.time_proj = nn.Linear(time_emb_dim, hidden_dim)\n",
+    "\n",
+    "        # MLP layers\n",
     "        layers = []\n",
-    "        in_dim = text_dim\n",
+    "        in_dim = img_dim  # after projection\n",
     "        for _ in range(num_layers - 1):\n",
     "            layers.append(nn.Linear(in_dim, hidden_dim))\n",
     "            layers.append(nn.GELU())\n",
     "            in_dim = hidden_dim\n",
-    "        layers.append(nn.Linear(hidden_dim, img_dim))  # final projection\n",
-    "        self.net = nn.Sequential(*layers)\n",
+    "        layers.append(nn.Linear(hidden_dim, img_dim))  # final output in image space\n",
+    "        self.mlp = nn.Sequential(*layers)\n",
     "\n",
-    "    def forward(self, t, z):\n",
-    "        # optional: concatenate time as extra feature\n",
-    "        # z: [B, text_dim], t: [B] or scalar\n",
-    "        t_emb = t.view(-1,1).expand(z.size(0), 1)  # (B,1)\n",
-    "        z_in = torch.cat([z, t_emb], dim=1)        # (B, text_dim+1)\n",
-    "        return self.net(z_in)                       # (B, img_dim)\n"
+    "    def forward(self, t, z_text):\n",
+    "        # 1. Project text embeddings into image space\n",
+    "        z_proj = self.proj(z_text)\n",
+    "\n",
+    "        # 2. Compute time embedding\n",
+    "        t_emb = self.time_emb(t)\n",
+    "        t_emb = self.time_proj(t_emb)\n",
+    "\n",
+    "        # 3. Add residual time embedding\n",
+    "        h = z_proj + t_emb  # simple residual addition\n",
+    "\n",
+    "        # 4. Pass through MLP\n",
+    "        v = self.mlp(h)  # (B, img_dim)\n",
+    "        return v, z_proj  # return velocity and projected text embedding\n"
    ]
   },
   {
@@ -115,8 +136,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "\n",
     "class ResidualFlowTransformer(nn.Module):\n",
     "    def __init__(self, text_dim, img_dim, hidden_dim=512, num_layers=4, nhead=8, time_emb_dim=128, temperature=1.0):\n",
     "        super().__init__()\n",
@@ -289,7 +308,7 @@
     "# 6. Diffusion Priors\n",
     "# Configuration\n",
     "EPOCHS = 60\n",
-    "BATCH_SIZE = 512\n",
+    "BATCH_SIZE = 64\n",
     "LR = 0.001\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "# Load data\n",
@@ -397,7 +416,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ResidualFlowTransformer(text_dim=1024, img_dim=1536, time_emb_dim=BATCH_SIZE).to(DEVICE)\n",
+    "\n",
+    "#model = ResidualFlowTransformer(text_dim=1024, img_dim=1536, time_emb_dim=BATCH_SIZE, temperature=0.2).to(DEVICE)\n",
+    "model = LatentFlowMLP(text_dim=1024, img_dim=1536, time_emb_dim=BATCH_SIZE).to(DEVICE)\n",
     "MODEL_PATH = \"drive/MyDrive/data/models/crossflow.pth\"\n",
     "model = training_crossflow(\n",
     "    model,\n",
